formulario produto em admin

--- a/WebContent/includes/estrutura.xhtml
+++ b/WebContent/includes/estrutura.xhtml
@@ -9,7 +9,7 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<title><ui:insert name="titulo">FAE</ui:insert></title>
-	<link type="text/css" rel="stylesheet" href="styles/default.css" />
+	<link type="text/css" rel="stylesheet" href="/crud/styles/default.css" />
 </h:head>
 <h:body>
 	
