--- a/WebContent/includes/menu.xhtml
+++ b/WebContent/includes/menu.xhtml
@@ -1,15 +1,15 @@
-<h:panelGroup xmlns="http://www.w3.org/1999/xhtml"  
-      xmlns:h="http://java.sun.com/jsf/html"  
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
-	
+<h:panelGroup xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
+
 	<h1>Menu</h1>
 	<h:form>
 		<p:menu style="width: 160px">
-			 <p:menuitem value="Usuarios" url="usuario.jsf" icon="ui-icon-tag" />
+			<p:menuitem value="Usuarios" url="/usuario.jsf" icon="ui-icon-tag" />
+			<p:menuitem value="Produtos" url="/admin/produto.jsf" rendered="#{mainController.rendered}" icon="ui-icon-tag" />
 		</p:menu>
 	</h:form>
 </h:panelGroup>
-
