--- a/WebContent/includes/menu.xhtml
+++ b/WebContent/includes/menu.xhtml
@@ -8,6 +8,8 @@
 	<h1>Menu</h1>
 	<h:form>
 		<p:menu style="width: 160px">
+			<p:menuitem value="Categorias" url="categoria.jsf" icon="ui-icon-tag" />
+			
 			<p:menuitem value="Usuarios" url="/usuario.jsf" icon="ui-icon-tag" />
 			<p:menuitem value="Produtos" url="/admin/produto.jsf" rendered="#{mainController.rendered}" icon="ui-icon-tag" />
 		</p:menu>
